# consentcrawl

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  consent_managers.json  main.py  processed_urls.txt  pyproject.toml  requirements-dev.txt  requirements.txt
consent_crawl/: __init__.py  __main__.py  blocklists.py  crawl.py  errors.py  utils.py
consent_crawl/assets/: consent_managers.yml
consentcrawl/: __main__.py  blocklists.py  cli.py  crawl.py  utils.py
consentcrawl/assets/: blocklists.yml  consent_managers.yml
examples/github-actions/: github-actions-job.yml
examples/google-cloud-run/: Dockerfile  main.py  requirements.txt
