[tool.poetry]
name = "consentcrawl"
version = "0.1.3"
description = "Automatically check for GDPR/CCPA consent by running a Playwright headless browser to check for marketing and analytics scripts firing before and after consent."
authors = ["Dumky de Wilde"]
license = "MIT"
readme = "README.md"

homepage = "https://github.com/dumkydewilde/consentcrawl/"
repository = "https://github.com/dumkydewilde/consentcrawl/"
documentation = "https://github.com/dumkydewilde/consentcrawl/main/README.md"

classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Internet",
    "Topic :: Internet :: WWW/HTTP :: Site Management",
    "Topic :: Software Development :: Libraries"
]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
playwright = ">=1.34,<2.0"
pyyaml = "^6.0.1"

[tool.poetry.scripts]
consentcrawl = "consentcrawl.cli:cli"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
